commit bilingual contents

--- a/docs/visual-basic/misc/bc31196.md
+++ b/docs/visual-basic/misc/bc31196.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31196
 ms.assetid: 36be5c92-dd6b-41d4-894a-2bd71d772092
-ms.openlocfilehash: e8b42ff2c01f978e85b7be110b8965eb3e4cfdb8
-ms.sourcegitcommit: 14ad34f7c4564ee0f009acb8bfc0ea7af3bc9541
+ms.openlocfilehash: 975f837e630223f4c86aac59fced246f522b7293
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/01/2019
-ms.locfileid: "73424006"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408029"
 ---
-# <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a><span data-ttu-id="56628-102">I valori letterali XML e le proprietà axis XML non sono disponibili nella sessione di debug perché non sono usati in questo assembly.</span><span class="sxs-lookup"><span data-stu-id="56628-102">XML literals and XML axis properties are not available during this debugging session because they are not used in this assembly</span></span>
-<span data-ttu-id="56628-103">È stato fatto riferimento a un valore letterale XML o a una proprietà Axis XML nella finestra **espressioni** di controllo o **controllo immediato** durante una sessione di debug in cui non sono disponibili le funzionalità XML in Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="56628-103">An XML literal or XML axis property has been referenced in the **Watch** or **Immediate** window during a debugging session in which XML in Visual Basic features are not available.</span></span> <span data-ttu-id="56628-104">Questo è il caso di un assembly che non usa il codice XML in Visual Basic funzionalità o è una build di rilascio.</span><span class="sxs-lookup"><span data-stu-id="56628-104">This is the case for an assembly that either does not use the XML in Visual Basic features or is a release build.</span></span>  
+# <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a><span data-ttu-id="2ff29-102">I valori letterali XML e le proprietà axis XML non sono disponibili nella sessione di debug perché non sono usati in questo assembly.</span><span class="sxs-lookup"><span data-stu-id="2ff29-102">XML literals and XML axis properties are not available during this debugging session because they are not used in this assembly</span></span>
+<span data-ttu-id="2ff29-103">È stato fatto riferimento a un valore letterale XML o a una proprietà Axis XML nella finestra **espressioni** di controllo o **controllo immediato** durante una sessione di debug in cui non sono disponibili le funzionalità XML in Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="2ff29-103">An XML literal or XML axis property has been referenced in the **Watch** or **Immediate** window during a debugging session in which XML in Visual Basic features are not available.</span></span> <span data-ttu-id="2ff29-104">Questo è il caso di un assembly che non usa il codice XML in Visual Basic funzionalità o è una build di rilascio.</span><span class="sxs-lookup"><span data-stu-id="2ff29-104">This is the case for an assembly that either does not use the XML in Visual Basic features or is a release build.</span></span>  
   
- <span data-ttu-id="56628-105">**ID errore:** BC31196</span><span class="sxs-lookup"><span data-stu-id="56628-105">**Error ID:** BC31196</span></span>  
+ <span data-ttu-id="2ff29-105">**ID errore:** BC31196</span><span class="sxs-lookup"><span data-stu-id="2ff29-105">**Error ID:** BC31196</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="56628-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="56628-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2ff29-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2ff29-106">To correct this error</span></span>  
   
-- <span data-ttu-id="56628-107">Avviare una nuova sessione di debug usando la build di debug dell'assembly.</span><span class="sxs-lookup"><span data-stu-id="56628-107">Start a new debugging session using the debug build of the assembly.</span></span>  
+- <span data-ttu-id="2ff29-107">Avviare una nuova sessione di debug usando la build di debug dell'assembly.</span><span class="sxs-lookup"><span data-stu-id="2ff29-107">Start a new debugging session using the debug build of the assembly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="56628-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="56628-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2ff29-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2ff29-108">See also</span></span>
 
-- [<span data-ttu-id="56628-109">Debug dell'applicazione Visual Basic</span><span class="sxs-lookup"><span data-stu-id="56628-109">Debugging Your Visual Basic Application</span></span>](/visualstudio/debugger/debugger-basics)
-- [<span data-ttu-id="56628-110">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="56628-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="56628-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="56628-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)
-- [<span data-ttu-id="56628-112">XML</span><span class="sxs-lookup"><span data-stu-id="56628-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="2ff29-109">Debug dell'applicazione Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2ff29-109">Debugging Your Visual Basic Application</span></span>](/visualstudio/debugger/debugger-basics)
+- [<span data-ttu-id="2ff29-110">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="2ff29-110">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="2ff29-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="2ff29-111">XML Axis Properties</span></span>](../language-reference/xml-axis/index.md)
+- [<span data-ttu-id="2ff29-112">XML</span><span class="sxs-lookup"><span data-stu-id="2ff29-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
