--- a/docs/visual-basic/misc/bc33035.md
+++ b/docs/visual-basic/misc/bc33035.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>'deve definire l'operatore'<determinantoperator>' da usare in un '<shortcircuitoperator>' espressione
+title: Il tipo '<typename>' deve definire l'operatore '<determinantoperator>' per poter essere usato in un'espressione '<shortcircuitoperator>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc33035
@@ -7,35 +7,35 @@ f1_keywords:
 helpviewer_keywords:
 - BC33035
 ms.assetid: 50a0a39f-63cd-4100-aea9-91b5b6ab5bbf
-ms.openlocfilehash: 40435e5ed59f64d02bf6875545304b7926caf229
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 26308f289d89de6010bc5d86308a197d08e6cf5d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913016"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407067"
 ---
-# <a name="type-typename-must-define-operator-determinantoperator-to-be-used-in-a-shortcircuitoperator-expression"></a><span data-ttu-id="d9e48-102">Tipo '\<nomeTipo >' deve definire l'operatore '\<operatoredeterminante >' da usare in un '\<operatorecortocircuito >' espressione</span><span class="sxs-lookup"><span data-stu-id="d9e48-102">Type '\<typename>' must define operator '\<determinantoperator>' to be used in a '\<shortcircuitoperator>' expression</span></span>
-<span data-ttu-id="d9e48-103">Un [AndAlso Operator](../../visual-basic/language-reference/operators/andalso-operator.md) o un [OrElse Operator](../../visual-basic/language-reference/operators/orelse-operator.md) usa operandi di un tipo di classe o struttura, quando quella classe o struttura non definisce un operatore richiesto.</span><span class="sxs-lookup"><span data-stu-id="d9e48-103">An [AndAlso Operator](../../visual-basic/language-reference/operators/andalso-operator.md) or an [OrElse Operator](../../visual-basic/language-reference/operators/orelse-operator.md) uses operands of a class or structure type, when that class or structure does not define a required operator.</span></span>  
+# <a name="type-typename-must-define-operator-determinantoperator-to-be-used-in-a-shortcircuitoperator-expression"></a><span data-ttu-id="882cf-102">Il tipo '\<typename>' deve definire l'operatore '\<determinantoperator>' per poter essere usato in un'espressione '\<shortcircuitoperator>'</span><span class="sxs-lookup"><span data-stu-id="882cf-102">Type '\<typename>' must define operator '\<determinantoperator>' to be used in a '\<shortcircuitoperator>' expression</span></span>
+<span data-ttu-id="882cf-103">Un [AndAlso Operator](../language-reference/operators/andalso-operator.md) o un [OrElse Operator](../language-reference/operators/orelse-operator.md) usa operandi di un tipo di classe o struttura, quando quella classe o struttura non definisce un operatore richiesto.</span><span class="sxs-lookup"><span data-stu-id="882cf-103">An [AndAlso Operator](../language-reference/operators/andalso-operator.md) or an [OrElse Operator](../language-reference/operators/orelse-operator.md) uses operands of a class or structure type, when that class or structure does not define a required operator.</span></span>  
   
- <span data-ttu-id="d9e48-104">Poiché non si definisce direttamente un operatore di corto circuito (`AndAlso` o `OrElse`), è necessario definire gli operatori logici e determinanti corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="d9e48-104">Because you do not define a short-circuiting operator (`AndAlso` or `OrElse`) directly, you must define the corresponding logical and determinant operators.</span></span> <span data-ttu-id="d9e48-105">La tabella seguente mostra gli operatori richiesti.</span><span class="sxs-lookup"><span data-stu-id="d9e48-105">The following table shows the required operators.</span></span>  
+ <span data-ttu-id="882cf-104">Poiché non si definisce direttamente un operatore di corto circuito (`AndAlso` o `OrElse`), è necessario definire gli operatori logici e determinanti corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="882cf-104">Because you do not define a short-circuiting operator (`AndAlso` or `OrElse`) directly, you must define the corresponding logical and determinant operators.</span></span> <span data-ttu-id="882cf-105">La tabella seguente mostra gli operatori richiesti.</span><span class="sxs-lookup"><span data-stu-id="882cf-105">The following table shows the required operators.</span></span>  
   
-|<span data-ttu-id="d9e48-106">Operatore di corto circuito</span><span class="sxs-lookup"><span data-stu-id="d9e48-106">Short-circuiting operator</span></span>|<span data-ttu-id="d9e48-107">Operatore logico</span><span class="sxs-lookup"><span data-stu-id="d9e48-107">Logical operator</span></span>|<span data-ttu-id="d9e48-108">Operatore determinante</span><span class="sxs-lookup"><span data-stu-id="d9e48-108">Determinant operator</span></span>|  
+|<span data-ttu-id="882cf-106">Operatore di corto circuito</span><span class="sxs-lookup"><span data-stu-id="882cf-106">Short-circuiting operator</span></span>|<span data-ttu-id="882cf-107">Operatore logico</span><span class="sxs-lookup"><span data-stu-id="882cf-107">Logical operator</span></span>|<span data-ttu-id="882cf-108">Operatore determinante</span><span class="sxs-lookup"><span data-stu-id="882cf-108">Determinant operator</span></span>|  
 |--------------------------------|----------------------|--------------------------|  
-|`AndAlso`|[<span data-ttu-id="d9e48-109">Operatore And</span><span class="sxs-lookup"><span data-stu-id="d9e48-109">And Operator</span></span>](../../visual-basic/language-reference/operators/and-operator.md)|[<span data-ttu-id="d9e48-110">Operatore IsFalse</span><span class="sxs-lookup"><span data-stu-id="d9e48-110">IsFalse Operator</span></span>](../../visual-basic/language-reference/operators/isfalse-operator.md)|  
-|`OrElse`|[<span data-ttu-id="d9e48-111">Operatore Or</span><span class="sxs-lookup"><span data-stu-id="d9e48-111">Or Operator</span></span>](../../visual-basic/language-reference/operators/or-operator.md)|[<span data-ttu-id="d9e48-112">Operatore IsTrue</span><span class="sxs-lookup"><span data-stu-id="d9e48-112">IsTrue Operator</span></span>](../../visual-basic/language-reference/operators/istrue-operator.md)|  
+|`AndAlso`|[<span data-ttu-id="882cf-109">Operatore And</span><span class="sxs-lookup"><span data-stu-id="882cf-109">And Operator</span></span>](../language-reference/operators/and-operator.md)|[<span data-ttu-id="882cf-110">Operatore IsFalse</span><span class="sxs-lookup"><span data-stu-id="882cf-110">IsFalse Operator</span></span>](../language-reference/operators/isfalse-operator.md)|  
+|`OrElse`|[<span data-ttu-id="882cf-111">Operatore Or</span><span class="sxs-lookup"><span data-stu-id="882cf-111">Or Operator</span></span>](../language-reference/operators/or-operator.md)|[<span data-ttu-id="882cf-112">Operatore IsTrue</span><span class="sxs-lookup"><span data-stu-id="882cf-112">IsTrue Operator</span></span>](../language-reference/operators/istrue-operator.md)|  
   
- <span data-ttu-id="d9e48-113">Visual Basic Usa questi operatori logici e determinanti per costruire la logica di corto circuita `AndAlso` o `OrElse`.</span><span class="sxs-lookup"><span data-stu-id="d9e48-113">Visual Basic uses these logical and determinant operators to construct the short-circuiting logic for `AndAlso` or `OrElse`.</span></span> <span data-ttu-id="d9e48-114">Per il funzionamento corretto di questa operazione, è necessario che gli operandi e il valore restituito della definizione di `And` o `Or` siano del tipo contenitore, vale a dire, il tipo della classe o della struttura in cui si definisce `And` o `Or`.</span><span class="sxs-lookup"><span data-stu-id="d9e48-114">For this to work properly, both operands and the return value of your `And` or `Or` definition must be of the containing type, that is, the type of the class or structure in which you are defining `And` or `Or`.</span></span>  
+ <span data-ttu-id="882cf-113">Visual Basic usa questi operatori logici e determinanti per costruire la logica di corto circuito per `AndAlso` o `OrElse` .</span><span class="sxs-lookup"><span data-stu-id="882cf-113">Visual Basic uses these logical and determinant operators to construct the short-circuiting logic for `AndAlso` or `OrElse`.</span></span> <span data-ttu-id="882cf-114">Per il funzionamento corretto di questa operazione, è necessario che gli operandi e il valore restituito della definizione di `And` o `Or` siano del tipo contenitore, vale a dire, il tipo della classe o della struttura in cui si definisce `And` o `Or`.</span><span class="sxs-lookup"><span data-stu-id="882cf-114">For this to work properly, both operands and the return value of your `And` or `Or` definition must be of the containing type, that is, the type of the class or structure in which you are defining `And` or `Or`.</span></span>  
   
- <span data-ttu-id="d9e48-115">**ID errore:** BC33035</span><span class="sxs-lookup"><span data-stu-id="d9e48-115">**Error ID:** BC33035</span></span>  
+ <span data-ttu-id="882cf-115">**ID errore:** BC33035</span><span class="sxs-lookup"><span data-stu-id="882cf-115">**Error ID:** BC33035</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d9e48-116">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d9e48-116">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="882cf-116">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="882cf-116">To correct this error</span></span>  
   
-- <span data-ttu-id="d9e48-117">Definire gli operatori `And` e `IsFalse` oppure gli operatori `Or` e `IsTrue` nella classe o struttura usata per il tipo di operando dell'operatore `AndAlso` o `OrElse` .</span><span class="sxs-lookup"><span data-stu-id="d9e48-117">Define the `And` and `IsFalse` operators, or the `Or` and `IsTrue` operators, in the class or structure used for the operand type of the `AndAlso` or `OrElse` operator.</span></span> <span data-ttu-id="d9e48-118">Verificare che gli operandi per `And` o `Or` siano del tipo della classe o struttura in cui sono definiti.</span><span class="sxs-lookup"><span data-stu-id="d9e48-118">Be sure the operands for `And` or `Or` are of the type of the class or structure in which you define it.</span></span>  
+- <span data-ttu-id="882cf-117">Definire gli operatori `And` e `IsFalse` oppure gli operatori `Or` e `IsTrue` nella classe o struttura usata per il tipo di operando dell'operatore `AndAlso` o `OrElse` .</span><span class="sxs-lookup"><span data-stu-id="882cf-117">Define the `And` and `IsFalse` operators, or the `Or` and `IsTrue` operators, in the class or structure used for the operand type of the `AndAlso` or `OrElse` operator.</span></span> <span data-ttu-id="882cf-118">Verificare che gli operandi per `And` o `Or` siano del tipo della classe o struttura in cui sono definiti.</span><span class="sxs-lookup"><span data-stu-id="882cf-118">Be sure the operands for `And` or `Or` are of the type of the class or structure in which you define it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d9e48-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d9e48-119">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="882cf-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="882cf-119">See also</span></span>
 
-- [<span data-ttu-id="d9e48-120">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="d9e48-120">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="d9e48-121">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="d9e48-121">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="d9e48-122">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="d9e48-122">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="d9e48-123">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="d9e48-123">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [<span data-ttu-id="d9e48-124">Operatori logici e bit per bit in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d9e48-124">Logical and Bitwise Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/logical-and-bitwise-operators.md)
+- [<span data-ttu-id="882cf-120">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="882cf-120">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="882cf-121">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="882cf-121">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="882cf-122">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="882cf-122">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="882cf-123">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="882cf-123">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="882cf-124">Operatori logici e bit per bit in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="882cf-124">Logical and Bitwise Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/logical-and-bitwise-operators.md)
