--- a/docs/visual-basic/misc/bc36010.md
+++ b/docs/visual-basic/misc/bc36010.md
@@ -1,5 +1,5 @@
 ---
-title: Operando ' using' di tipo '<typename>' deve implementare IDisposable
+title: L'operando 'Using' di tipo '<typename>' deve implementare 'System.IDisposable'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36010
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36010
 ms.assetid: ae9ed5d5-68ba-4950-bb7a-61327fa0e7d5
-ms.openlocfilehash: ca22ef92598eacc3716d2910e16b2678a149e54e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: dc76ee48b641a9266bc72a832b4f853ea6871ba1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588839"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379004"
 ---
-# <a name="using-operand-of-type-typename-must-implement-systemidisposable"></a><span data-ttu-id="867ef-102">Operando ' using' di tipo '\<nomeTipo >' deve implementare IDisposable</span><span class="sxs-lookup"><span data-stu-id="867ef-102">'Using' operand of type '\<typename>' must implement System.IDisposable</span></span>
-<span data-ttu-id="867ef-103">Un'istruzione `Using` specifica una risorsa di un tipo che implementa l'interfaccia <xref:System.IDisposable> .</span><span class="sxs-lookup"><span data-stu-id="867ef-103">A `Using` statement specifies a resource of a type that does not implement the <xref:System.IDisposable> interface.</span></span>  
+# <a name="using-operand-of-type-typename-must-implement-systemidisposable"></a><span data-ttu-id="5efc5-102">L'operando 'Using' di tipo '\<typename>' deve implementare 'System.IDisposable'</span><span class="sxs-lookup"><span data-stu-id="5efc5-102">'Using' operand of type '\<typename>' must implement System.IDisposable</span></span>
+<span data-ttu-id="5efc5-103">Un'istruzione `Using` specifica una risorsa di un tipo che implementa l'interfaccia <xref:System.IDisposable> .</span><span class="sxs-lookup"><span data-stu-id="5efc5-103">A `Using` statement specifies a resource of a type that does not implement the <xref:System.IDisposable> interface.</span></span>  
   
- <span data-ttu-id="867ef-104">Lo scopo di un blocco `Using` è quello di garantire l'eliminazione di una risorsa di sistema all'uscita dal blocco.</span><span class="sxs-lookup"><span data-stu-id="867ef-104">The purpose of a `Using` block is to guarantee the disposal of a system resource when exiting the block.</span></span> <span data-ttu-id="867ef-105">A questo scopo, è necessario che la risorsa esponga il metodo <xref:System.IDisposable.Dispose%2A> implementato da <xref:System.IDisposable>.</span><span class="sxs-lookup"><span data-stu-id="867ef-105">To satisfy this purpose, the resource must expose the <xref:System.IDisposable.Dispose%2A> method implemented from <xref:System.IDisposable>.</span></span>  
+ <span data-ttu-id="5efc5-104">Lo scopo di un blocco `Using` è quello di garantire l'eliminazione di una risorsa di sistema all'uscita dal blocco.</span><span class="sxs-lookup"><span data-stu-id="5efc5-104">The purpose of a `Using` block is to guarantee the disposal of a system resource when exiting the block.</span></span> <span data-ttu-id="5efc5-105">A questo scopo, è necessario che la risorsa esponga il metodo <xref:System.IDisposable.Dispose%2A> implementato da <xref:System.IDisposable>.</span><span class="sxs-lookup"><span data-stu-id="5efc5-105">To satisfy this purpose, the resource must expose the <xref:System.IDisposable.Dispose%2A> method implemented from <xref:System.IDisposable>.</span></span>  
   
- <span data-ttu-id="867ef-106">**ID errore:** BC36010</span><span class="sxs-lookup"><span data-stu-id="867ef-106">**Error ID:** BC36010</span></span>  
+ <span data-ttu-id="5efc5-106">**ID errore:** BC36010</span><span class="sxs-lookup"><span data-stu-id="5efc5-106">**Error ID:** BC36010</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="867ef-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="867ef-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5efc5-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5efc5-107">To correct this error</span></span>  
   
-- <span data-ttu-id="867ef-108">Rimuovere la risorsa dall'elenco di risorse dell'istruzione `Using` o sostituirla con una risorsa che implementa <xref:System.IDisposable>.</span><span class="sxs-lookup"><span data-stu-id="867ef-108">Remove the resource from the resource list of the `Using` statement, or replace it with a resource that implements <xref:System.IDisposable>.</span></span>  
+- <span data-ttu-id="5efc5-108">Rimuovere la risorsa dall'elenco di risorse dell'istruzione `Using` o sostituirla con una risorsa che implementa <xref:System.IDisposable>.</span><span class="sxs-lookup"><span data-stu-id="5efc5-108">Remove the resource from the resource list of the `Using` statement, or replace it with a resource that implements <xref:System.IDisposable>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="867ef-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="867ef-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5efc5-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5efc5-109">See also</span></span>
 
 - <xref:System.IDisposable>
-- [<span data-ttu-id="867ef-110">Istruzione Using</span><span class="sxs-lookup"><span data-stu-id="867ef-110">Using Statement</span></span>](../../visual-basic/language-reference/statements/using-statement.md)
-- [<span data-ttu-id="867ef-111">Procedura: Eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="867ef-111">How to: Dispose of a System Resource</span></span>](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [<span data-ttu-id="5efc5-110">Istruzione using</span><span class="sxs-lookup"><span data-stu-id="5efc5-110">Using Statement</span></span>](../language-reference/statements/using-statement.md)
+- [<span data-ttu-id="5efc5-111">Procedura: eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="5efc5-111">How to: Dispose of a System Resource</span></span>](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
