--- a/docs/visual-basic/misc/bc36586.md
+++ b/docs/visual-basic/misc/bc36586.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento non specificato per il parametro '<parametername>'del metodo di estensione '<methodname>'definito '<typename>'
+title: Argomento non specificato per il parametro ' <parametername> ' del metodo di estensione ' <methodname> ' definito in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36586
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36586
 ms.assetid: e73f77e6-71c5-45e4-abe1-ce9b0e67e08c
-ms.openlocfilehash: 31a4862e0449273db4a99c52fb318abbe7aad394
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6ad8352fe170dd3e24056815ef97c0661bf5f9eb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632378"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377327"
 ---
-# <a name="argument-not-specified-for-parameter-parametername-of-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="6f413-102">Argomento non specificato per il parametro '\<nomeparametro >' del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="6f413-102">Argument not specified for parameter '\<parametername>' of extension method '\<methodname>' defined in '\<typename>'</span></span>
-<span data-ttu-id="6f413-103">Non è stato fornito un argomento per un parametro obbligatorio in un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="6f413-103">An argument for a required parameter in an extension method has not been supplied.</span></span>  
+# <a name="argument-not-specified-for-parameter-parametername-of-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="0e06f-102">Argomento non specificato per il parametro ' \<parametername> ' del metodo di estensione ' \<methodname> ' definito in ' \<typename> '</span><span class="sxs-lookup"><span data-stu-id="0e06f-102">Argument not specified for parameter '\<parametername>' of extension method '\<methodname>' defined in '\<typename>'</span></span>
+<span data-ttu-id="0e06f-103">Non è stato fornito un argomento per un parametro obbligatorio in un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="0e06f-103">An argument for a required parameter in an extension method has not been supplied.</span></span>  
   
- <span data-ttu-id="6f413-104">**ID errore:** BC36586</span><span class="sxs-lookup"><span data-stu-id="6f413-104">**Error ID:** BC36586</span></span>  
+ <span data-ttu-id="0e06f-104">**ID errore:** BC36586</span><span class="sxs-lookup"><span data-stu-id="0e06f-104">**Error ID:** BC36586</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6f413-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6f413-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0e06f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0e06f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="6f413-106">Fornire un argomento per il parametro specificato.</span><span class="sxs-lookup"><span data-stu-id="6f413-106">Supply an argument for the specified parameter.</span></span>  
+- <span data-ttu-id="0e06f-106">Fornire un argomento per il parametro specificato.</span><span class="sxs-lookup"><span data-stu-id="0e06f-106">Supply an argument for the specified parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6f413-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6f413-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0e06f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0e06f-107">See also</span></span>
 
-- [<span data-ttu-id="6f413-108">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="6f413-108">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="0e06f-108">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="0e06f-108">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
 
-- [<span data-ttu-id="6f413-109">Risoluzione dei problemi relativi alle routine</span><span class="sxs-lookup"><span data-stu-id="6f413-109">Troubleshooting Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/troubleshooting-procedures.md)
+- [<span data-ttu-id="0e06f-109">Risoluzione dei problemi relativi alle routine</span><span class="sxs-lookup"><span data-stu-id="0e06f-109">Troubleshooting Procedures</span></span>](../programming-guide/language-features/procedures/troubleshooting-procedures.md)
