--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -1,5 +1,5 @@
 ---
-title: "'ComClassAttribute' è specificato per la classe<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non vengono generate interfacce COM"
+title: È stato specificato 'Microsoft.VisualBasic.ComClassAttribute' per la classe '<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non sono state generate interfacce COM
 ms.date: 07/20/2015
 f1_keywords:
 - bc40011
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC40011
 ms.assetid: 39aed273-bf27-4667-8116-022c4dd8f3c5
-ms.openlocfilehash: 9588880efb123793039f8e83ed284febbe4382af
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 22eff5a83cac0f466dde59f8f8489e322d9b3b2a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627474"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384898"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-is-specified-for-class-classname-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a><span data-ttu-id="a8028-102">'ComClassAttribute' è specificato per la classe\<NomeClasse >', ma non ha membri pubblici che possano essere esposti a COM, pertanto non vengono generate interfacce COM</span><span class="sxs-lookup"><span data-stu-id="a8028-102">'Microsoft.VisualBasic.ComClassAttribute' is specified for class '\<classname>' but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span></span>
-<span data-ttu-id="a8028-103">Una classe che usa un blocco di attributi `COMClassAttribute` non definisce proprietà o metodi `Public` .</span><span class="sxs-lookup"><span data-stu-id="a8028-103">A class using a `COMClassAttribute` attribute block does not define any `Public` properties or methods.</span></span> <span data-ttu-id="a8028-104">Se una classe deve essere esposta come oggetto COM, le sue proprietà e i suoi metodi devono essere dichiarati con accesso `Public` .</span><span class="sxs-lookup"><span data-stu-id="a8028-104">If a class is to be exposed as a COM object, its properties and methods must be declared with `Public` access.</span></span>  
+# <a name="microsoftvisualbasiccomclassattribute-is-specified-for-class-classname-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a><span data-ttu-id="f84af-102">È stato specificato 'Microsoft.VisualBasic.ComClassAttribute' per la classe '\<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non sono state generate interfacce COM</span><span class="sxs-lookup"><span data-stu-id="f84af-102">'Microsoft.VisualBasic.ComClassAttribute' is specified for class '\<classname>' but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span></span>
+<span data-ttu-id="f84af-103">Una classe che usa un blocco di attributi `COMClassAttribute` non definisce proprietà o metodi `Public` .</span><span class="sxs-lookup"><span data-stu-id="f84af-103">A class using a `COMClassAttribute` attribute block does not define any `Public` properties or methods.</span></span> <span data-ttu-id="f84af-104">Se una classe deve essere esposta come oggetto COM, le sue proprietà e i suoi metodi devono essere dichiarati con accesso `Public` .</span><span class="sxs-lookup"><span data-stu-id="f84af-104">If a class is to be exposed as a COM object, its properties and methods must be declared with `Public` access.</span></span>  
   
- <span data-ttu-id="a8028-105">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="a8028-105">The message is a warning by default.</span></span> <span data-ttu-id="a8028-106">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="a8028-106">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="f84af-105">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="f84af-105">The message is a warning by default.</span></span> <span data-ttu-id="f84af-106">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="f84af-106">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="a8028-107">**ID errore:** BC40011</span><span class="sxs-lookup"><span data-stu-id="a8028-107">**Error ID:** BC40011</span></span>  
+ <span data-ttu-id="f84af-107">**ID errore:** BC40011</span><span class="sxs-lookup"><span data-stu-id="f84af-107">**Error ID:** BC40011</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a8028-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8028-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f84af-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f84af-108">To correct this error</span></span>  
   
-- <span data-ttu-id="a8028-109">Aggiungere la parola chiave `Public` a una o più proprietà o metodi nella classe oppure rimuovere il blocco di attributi `COMClassAttribute` .</span><span class="sxs-lookup"><span data-stu-id="a8028-109">Add the `Public` keyword to one or more properties or methods in the class, or remove the `COMClassAttribute` attribute block.</span></span>  
+- <span data-ttu-id="f84af-109">Aggiungere la parola chiave `Public` a una o più proprietà o metodi nella classe oppure rimuovere il blocco di attributi `COMClassAttribute` .</span><span class="sxs-lookup"><span data-stu-id="f84af-109">Add the `Public` keyword to one or more properties or methods in the class, or remove the `COMClassAttribute` attribute block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a8028-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8028-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f84af-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f84af-110">See also</span></span>
 
-- [<span data-ttu-id="a8028-111">Public</span><span class="sxs-lookup"><span data-stu-id="a8028-111">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
-- [<span data-ttu-id="a8028-112">Classe ComClassAttribute</span><span class="sxs-lookup"><span data-stu-id="a8028-112">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)
+- [<span data-ttu-id="f84af-111">Pubblica</span><span class="sxs-lookup"><span data-stu-id="f84af-111">Public</span></span>](../language-reference/modifiers/public.md)
+- [<span data-ttu-id="f84af-112">Classe ComClassAttribute</span><span class="sxs-lookup"><span data-stu-id="f84af-112">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)
