--- a/docs/visual-basic/misc/bc2030.md
+++ b/docs/visual-basic/misc/bc2030.md
@@ -1,5 +1,5 @@
 ---
-title: L'opzione-moduleassemblyname può essere specificata solo quando si compila una destinazione di tipo ' Module '
+title: L'opzione -moduleassemblyname può essere specificata solo durante la compilazione di una destinazione del tipo 'module'
 ms.date: 07/20/2015
 f1_keywords:
 - bc2030
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC2030
 ms.assetid: 2ebc577b-3464-40cc-8788-9fc9d3b4f928
-ms.openlocfilehash: f0d48ab6abbb5e0d755f034614042cca5d403249
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: f95d4c3a992b177ae2f6f1eaad0f0f02cdf33fb9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775385"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84404109"
 ---
-# <a name="the-moduleassemblyname-option-may-only-be-specified-when-building-a-target-of-type-module"></a><span data-ttu-id="8c471-102">L'opzione /moduleassemblyname può essere specificata solo durante la compilazione di una destinazione del tipo 'module'</span><span class="sxs-lookup"><span data-stu-id="8c471-102">The /moduleassemblyname option may only be specified when building a target of type 'module'</span></span>
-<span data-ttu-id="8c471-103">Al compilatore Visual Basic viene passata l'opzione del compilatore `/moduleassemblyname` quando l'opzione `/target` è impostata su un valore diverso da `module`.</span><span class="sxs-lookup"><span data-stu-id="8c471-103">The Visual Basic compiler has been passed the `/moduleassemblyname` compiler option when the `/target` option is set to a value other than `module`.</span></span>  
+# <a name="the-moduleassemblyname-option-may-only-be-specified-when-building-a-target-of-type-module"></a><span data-ttu-id="40125-102">L'opzione /moduleassemblyname può essere specificata solo durante la compilazione di una destinazione del tipo 'module'</span><span class="sxs-lookup"><span data-stu-id="40125-102">The /moduleassemblyname option may only be specified when building a target of type 'module'</span></span>
+<span data-ttu-id="40125-103">Al compilatore Visual Basic viene passata l'opzione del compilatore `/moduleassemblyname` quando l'opzione `/target` è impostata su un valore diverso da `module`.</span><span class="sxs-lookup"><span data-stu-id="40125-103">The Visual Basic compiler has been passed the `/moduleassemblyname` compiler option when the `/target` option is set to a value other than `module`.</span></span>  
   
- <span data-ttu-id="8c471-104">**ID errore:** BC2030</span><span class="sxs-lookup"><span data-stu-id="8c471-104">**Error ID:** BC2030</span></span>  
+ <span data-ttu-id="40125-104">**ID errore:** BC2030</span><span class="sxs-lookup"><span data-stu-id="40125-104">**Error ID:** BC2030</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8c471-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8c471-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="40125-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="40125-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="8c471-106">Rimuovere l'opzione del compilatore `/moduleassemblyname` o impostare l'opzione `/target` su `module`.</span><span class="sxs-lookup"><span data-stu-id="8c471-106">Remove the `/moduleassemblyname` compiler option or set the `/target` option to `module`.</span></span>  
+1. <span data-ttu-id="40125-106">Rimuovere l'opzione del compilatore `/moduleassemblyname` o impostare l'opzione `/target` su `module`.</span><span class="sxs-lookup"><span data-stu-id="40125-106">Remove the `/moduleassemblyname` compiler option or set the `/target` option to `module`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8c471-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8c471-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="40125-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="40125-107">See also</span></span>
 
-- [<span data-ttu-id="8c471-108">-target (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="8c471-108">-target (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/target.md)
-- [<span data-ttu-id="8c471-109">-moduleassemblyname</span><span class="sxs-lookup"><span data-stu-id="8c471-109">-moduleassemblyname</span></span>](../../visual-basic/reference/command-line-compiler/moduleassemblyname.md)
-- [<span data-ttu-id="8c471-110">Compilatore della riga di comando di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8c471-110">Visual Basic Command-Line Compiler</span></span>](../../visual-basic/reference/command-line-compiler/index.md)
+- [<span data-ttu-id="40125-108">-target (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="40125-108">-target (Visual Basic)</span></span>](../reference/command-line-compiler/target.md)
+- [<span data-ttu-id="40125-109">-moduleassemblyname</span><span class="sxs-lookup"><span data-stu-id="40125-109">-moduleassemblyname</span></span>](../reference/command-line-compiler/moduleassemblyname.md)
+- [<span data-ttu-id="40125-110">Compilatore della riga di comando di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="40125-110">Visual Basic Command-Line Compiler</span></span>](../reference/command-line-compiler/index.md)
