--- a/docs/visual-basic/misc/bc30099.md
+++ b/docs/visual-basic/misc/bc30099.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30099
 ms.assetid: 37c65fc8-6ad9-456a-80b8-66288c62ef24
-ms.openlocfilehash: ed8bf1b2f0b5cd35a7e43c6628c89cb4bc08741b
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d6ccffcb1adb42284da8fe6295fed864425ec8f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935746"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380471"
 ---
-# <a name="exit-select-can-only-appear-inside-a-select-statement"></a><span data-ttu-id="bcfdc-102">'Exit Select' può essere specificato solo all'interno di un'istruzione 'Select'</span><span class="sxs-lookup"><span data-stu-id="bcfdc-102">'Exit Select' can only appear inside a 'Select' statement</span></span>
-<span data-ttu-id="bcfdc-103">Un'istruzione `Exit Select` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="bcfdc-103">An `Exit Select` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="bcfdc-104">`Exit Select` è valido solo tra un'istruzione `Select` o `Select Case` e un'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="bcfdc-104">`Exit Select` is valid only between a `Select` or `Select Case` statement and a corresponding `End Select` statement.</span></span>  
+# <a name="exit-select-can-only-appear-inside-a-select-statement"></a><span data-ttu-id="015be-102">'Exit Select' può essere specificato solo all'interno di un'istruzione 'Select'</span><span class="sxs-lookup"><span data-stu-id="015be-102">'Exit Select' can only appear inside a 'Select' statement</span></span>
+<span data-ttu-id="015be-103">Un'istruzione `Exit Select` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="015be-103">An `Exit Select` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="015be-104">`Exit Select` è valido solo tra un'istruzione `Select` o `Select Case` e un'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="015be-104">`Exit Select` is valid only between a `Select` or `Select Case` statement and a corresponding `End Select` statement.</span></span>  
   
- <span data-ttu-id="bcfdc-105">**ID errore:** BC30099</span><span class="sxs-lookup"><span data-stu-id="bcfdc-105">**Error ID:** BC30099</span></span>  
+ <span data-ttu-id="015be-105">**ID errore:** BC30099</span><span class="sxs-lookup"><span data-stu-id="015be-105">**Error ID:** BC30099</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bcfdc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bcfdc-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="015be-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="015be-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="bcfdc-107">Verificare che un'istruzione `Select` o `Select Case` valida preceda `Exit Select` e che un'istruzione `End Select` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="bcfdc-107">Make sure a valid `Select` or `Select Case` statement precedes the `Exit Select` and a valid `End Select` statement appears after it.</span></span>  
+1. <span data-ttu-id="015be-107">Verificare che un'istruzione `Select` o `Select Case` valida preceda `Exit Select` e che un'istruzione `End Select` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="015be-107">Make sure a valid `Select` or `Select Case` statement precedes the `Exit Select` and a valid `End Select` statement appears after it.</span></span>  
   
-2. <span data-ttu-id="bcfdc-108">Verificare che le altre strutture di controllo all'interno del blocco `Select` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="bcfdc-108">Verify that other control structures within the `Select` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="015be-108">Verificare che le altre strutture di controllo all'interno del blocco `Select` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="015be-108">Verify that other control structures within the `Select` block are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bcfdc-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bcfdc-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="015be-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="015be-109">See also</span></span>
 
-- [<span data-ttu-id="bcfdc-110">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="bcfdc-110">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="015be-110">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="015be-110">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
