--- a/docs/visual-basic/misc/bc30121.md
+++ b/docs/visual-basic/misc/bc30121.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30121
 ms.assetid: 4ac5b018-5632-4661-8ac6-dbda2f8c4dfe
-ms.openlocfilehash: c2d063cf24a34d41b5577a49d918d45cb021c3e6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9c495311809264d08e7d59708705334da8f961ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636535"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399943"
 ---
-# <a name="inherits-can-appear-only-once-within-a-class-statement-and-can-only-specify-one-class"></a><span data-ttu-id="a5a63-102">'Inherits' può essere specificato solo una volta in un'istruzione 'Class' e può specificare solo una classe</span><span class="sxs-lookup"><span data-stu-id="a5a63-102">'Inherits' can appear only once within a 'Class' statement and can only specify one class</span></span>
-<span data-ttu-id="a5a63-103">Più istruzioni `Inherits` vengono visualizzate nella stessa classe o un'istruzione `Inherits` specifica più classi.</span><span class="sxs-lookup"><span data-stu-id="a5a63-103">More than one `Inherits` statement appears in the same class, or an `Inherits` statement specifies more than one class.</span></span> <span data-ttu-id="a5a63-104">Una classe può ereditare solo da una classe base.</span><span class="sxs-lookup"><span data-stu-id="a5a63-104">A class can inherit from only one base class.</span></span>  
+# <a name="inherits-can-appear-only-once-within-a-class-statement-and-can-only-specify-one-class"></a><span data-ttu-id="63c03-102">'Inherits' può essere specificato solo una volta in un'istruzione 'Class' e può specificare solo una classe</span><span class="sxs-lookup"><span data-stu-id="63c03-102">'Inherits' can appear only once within a 'Class' statement and can only specify one class</span></span>
+<span data-ttu-id="63c03-103">Più istruzioni `Inherits` vengono visualizzate nella stessa classe o un'istruzione `Inherits` specifica più classi.</span><span class="sxs-lookup"><span data-stu-id="63c03-103">More than one `Inherits` statement appears in the same class, or an `Inherits` statement specifies more than one class.</span></span> <span data-ttu-id="63c03-104">Una classe può ereditare solo da una classe base.</span><span class="sxs-lookup"><span data-stu-id="63c03-104">A class can inherit from only one base class.</span></span>  
   
- <span data-ttu-id="a5a63-105">**ID errore:** BC30121</span><span class="sxs-lookup"><span data-stu-id="a5a63-105">**Error ID:** BC30121</span></span>  
+ <span data-ttu-id="63c03-105">**ID errore:** BC30121</span><span class="sxs-lookup"><span data-stu-id="63c03-105">**Error ID:** BC30121</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a5a63-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a5a63-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="63c03-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="63c03-106">To correct this error</span></span>  
   
-- <span data-ttu-id="a5a63-107">Rimuovere qualsiasi istruzione `Inherits` aggiuntiva e assicurarsi che l'istruzione `Inherits` rimanente specifichi una sola classe base.</span><span class="sxs-lookup"><span data-stu-id="a5a63-107">Remove any extra `Inherits` statements and make sure the remaining `Inherits` statement specifies only one base class.</span></span>  
+- <span data-ttu-id="63c03-107">Rimuovere qualsiasi istruzione `Inherits` aggiuntiva e assicurarsi che l'istruzione `Inherits` rimanente specifichi una sola classe base.</span><span class="sxs-lookup"><span data-stu-id="63c03-107">Remove any extra `Inherits` statements and make sure the remaining `Inherits` statement specifies only one base class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a5a63-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a5a63-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="63c03-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="63c03-108">See also</span></span>
 
-- [<span data-ttu-id="a5a63-109">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="a5a63-109">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
-- [<span data-ttu-id="a5a63-110">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="a5a63-110">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="63c03-109">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="63c03-109">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="63c03-110">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="63c03-110">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
