--- a/docs/visual-basic/misc/bc30124.md
+++ b/docs/visual-basic/misc/bc30124.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30124
 ms.assetid: b24fc997-9a6b-44d1-b712-dab498a6fc72
-ms.openlocfilehash: 5ba6b093525e79326bf951dc2eaf965a56c55efc
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5ba71a89bce121deffdf74efa1e0fdf49fe75e4b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682937"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359309"
 ---
-# <a name="property-without-a-readonly-or-writeonly-specifier-must-provide-both-a-get-and-a-set"></a><span data-ttu-id="de0d3-102">Una proprietà senza identificatore 'ReadOnly' o 'WriteOnly' deve fornire sia un elemento 'Get' che un elemento 'Set'</span><span class="sxs-lookup"><span data-stu-id="de0d3-102">Property without a 'ReadOnly' or 'WriteOnly' specifier must provide both a 'Get' and a 'Set'</span></span>
-<span data-ttu-id="de0d3-103">Se una proprietà non è dichiarata come `ReadOnly` o `WriteOnly`, deve fornire le routine per la lettura e scrittura del proprio valore.</span><span class="sxs-lookup"><span data-stu-id="de0d3-103">If a property is not declared as `ReadOnly` or `WriteOnly`, it must supply procedures for reading and writing its value.</span></span>  
+# <a name="property-without-a-readonly-or-writeonly-specifier-must-provide-both-a-get-and-a-set"></a><span data-ttu-id="792ed-102">Una proprietà senza identificatore 'ReadOnly' o 'WriteOnly' deve fornire sia un elemento 'Get' che un elemento 'Set'</span><span class="sxs-lookup"><span data-stu-id="792ed-102">Property without a 'ReadOnly' or 'WriteOnly' specifier must provide both a 'Get' and a 'Set'</span></span>
+<span data-ttu-id="792ed-103">Se una proprietà non è dichiarata come `ReadOnly` o `WriteOnly`, deve fornire le routine per la lettura e scrittura del proprio valore.</span><span class="sxs-lookup"><span data-stu-id="792ed-103">If a property is not declared as `ReadOnly` or `WriteOnly`, it must supply procedures for reading and writing its value.</span></span>  
   
- <span data-ttu-id="de0d3-104">**ID errore:** BC30124</span><span class="sxs-lookup"><span data-stu-id="de0d3-104">**Error ID:** BC30124</span></span>  
+ <span data-ttu-id="792ed-104">**ID errore:** BC30124</span><span class="sxs-lookup"><span data-stu-id="792ed-104">**Error ID:** BC30124</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="de0d3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="de0d3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="792ed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="792ed-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="de0d3-106">Assicurarsi di includere sia una routine `Get` che una routine `Set` tra l'istruzione `Property` e l'istruzione `End Property` .</span><span class="sxs-lookup"><span data-stu-id="de0d3-106">Make sure you include both a `Get` procedure and a `Set` procedure between the `Property` statement and the `End Property` statement.</span></span>  
+1. <span data-ttu-id="792ed-106">Assicurarsi di includere sia una routine `Get` che una routine `Set` tra l'istruzione `Property` e l'istruzione `End Property` .</span><span class="sxs-lookup"><span data-stu-id="792ed-106">Make sure you include both a `Get` procedure and a `Set` procedure between the `Property` statement and the `End Property` statement.</span></span>  
   
-2. <span data-ttu-id="de0d3-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="de0d3-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
+2. <span data-ttu-id="792ed-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="792ed-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="de0d3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="de0d3-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="792ed-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="792ed-108">See also</span></span>
 
-- [<span data-ttu-id="de0d3-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="de0d3-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="de0d3-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="de0d3-110">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
-- [<span data-ttu-id="de0d3-111">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="de0d3-111">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
+- [<span data-ttu-id="792ed-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="792ed-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="792ed-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="792ed-110">Get Statement</span></span>](../language-reference/statements/get-statement.md)
+- [<span data-ttu-id="792ed-111">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="792ed-111">Set Statement</span></span>](../language-reference/statements/set-statement.md)
