--- a/docs/visual-basic/misc/bc30624.md
+++ b/docs/visual-basic/misc/bc30624.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30624
 ms.assetid: ee35bace-6914-4139-a581-7599cd6828cb
-ms.openlocfilehash: 7b3610e52e715d85602ab7a242d886135057b799
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7572c733c9c23205fea74197632585fa1832cdaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646721"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401173"
 ---
-# <a name="structure-statement-must-end-with-a-matching-end-structure"></a><span data-ttu-id="fdfd3-102">L'istruzione 'Structure' deve terminare con un oggetto 'End Structure' corrispondente</span><span class="sxs-lookup"><span data-stu-id="fdfd3-102">'Structure' statement must end with a matching 'End Structure'</span></span>
-<span data-ttu-id="fdfd3-103">Le strutture iniziano con un'istruzione `Structure` e terminano con un costrutto `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="fdfd3-103">Structures begin with a `Structure` statement and end with an `End Structure` construct.</span></span>  
+# <a name="structure-statement-must-end-with-a-matching-end-structure"></a><span data-ttu-id="2724f-102">L'istruzione 'Structure' deve terminare con un oggetto 'End Structure' corrispondente</span><span class="sxs-lookup"><span data-stu-id="2724f-102">'Structure' statement must end with a matching 'End Structure'</span></span>
+<span data-ttu-id="2724f-103">Le strutture iniziano con un'istruzione `Structure` e terminano con un costrutto `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="2724f-103">Structures begin with a `Structure` statement and end with an `End Structure` construct.</span></span>  
   
- <span data-ttu-id="fdfd3-104">**ID errore:** BC30624</span><span class="sxs-lookup"><span data-stu-id="fdfd3-104">**Error ID:** BC30624</span></span>  
+ <span data-ttu-id="2724f-104">**ID errore:** BC30624</span><span class="sxs-lookup"><span data-stu-id="2724f-104">**Error ID:** BC30624</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fdfd3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fdfd3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2724f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2724f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="fdfd3-106">Verificare che il blocco di struttura termini con un'istruzione `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="fdfd3-106">Make sure that the structure block ends with an `End Structure` statement.</span></span>  
+- <span data-ttu-id="2724f-106">Verificare che il blocco di struttura termini con un'istruzione `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="2724f-106">Make sure that the structure block ends with an `End Structure` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fdfd3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fdfd3-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2724f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2724f-107">See also</span></span>
 
-- [<span data-ttu-id="fdfd3-108">Strutture</span><span class="sxs-lookup"><span data-stu-id="fdfd3-108">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [<span data-ttu-id="fdfd3-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="fdfd3-109">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [<span data-ttu-id="2724f-108">Strutture</span><span class="sxs-lookup"><span data-stu-id="2724f-108">Structures</span></span>](../programming-guide/language-features/data-types/structures.md)
+- [<span data-ttu-id="2724f-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="2724f-109">Structures and Classes</span></span>](../programming-guide/language-features/data-types/structures-and-classes.md)
