--- a/docs/visual-basic/misc/bc30735.md
+++ b/docs/visual-basic/misc/bc30735.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo in un modulo non può essere dichiarato '<specifier>'
+title: Il tipo in un modulo non può essere dichiarato ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30735
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30735
 ms.assetid: df94d581-7f5b-4d42-ae2b-1ef912f133cc
-ms.openlocfilehash: 418680892e69bf0ecf9bc414e5f1ef130522786c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cfb72b6f10d16588692301d4fd481031d28f8dec
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657866"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405937"
 ---
-# <a name="type-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="7b605-102">Tipo in un modulo non può essere dichiarato '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="7b605-102">Type in a Module cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="7b605-103">All'interno di un modulo è stato dichiarato un tipo con modificatori non validi.</span><span class="sxs-lookup"><span data-stu-id="7b605-103">A type with invalid modifiers was declared within a module.</span></span>  
+# <a name="type-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="7cb72-102">Il tipo in un modulo non può essere dichiarato ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="7cb72-102">Type in a Module cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="7cb72-103">All'interno di un modulo è stato dichiarato un tipo con modificatori non validi.</span><span class="sxs-lookup"><span data-stu-id="7cb72-103">A type with invalid modifiers was declared within a module.</span></span>  
   
- <span data-ttu-id="7b605-104">**ID errore:** BC30735</span><span class="sxs-lookup"><span data-stu-id="7b605-104">**Error ID:** BC30735</span></span>  
+ <span data-ttu-id="7cb72-104">**ID errore:** BC30735</span><span class="sxs-lookup"><span data-stu-id="7cb72-104">**Error ID:** BC30735</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7b605-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7b605-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7cb72-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7cb72-105">To correct this error</span></span>  
   
-- <span data-ttu-id="7b605-106">Non usare i modificatori `Protected` o `Protected Friend` nei tipi dichiarati all'interno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="7b605-106">Do not use `Protected` or `Protected Friend` modifiers on types declared within a module.</span></span>  
+- <span data-ttu-id="7cb72-106">Non usare i modificatori `Protected` o `Protected Friend` nei tipi dichiarati all'interno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="7cb72-106">Do not use `Protected` or `Protected Friend` modifiers on types declared within a module.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7b605-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7b605-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7cb72-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7cb72-107">See also</span></span>
 
-- [<span data-ttu-id="7b605-108">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="7b605-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
-- [<span data-ttu-id="7b605-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="7b605-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="7cb72-108">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="7cb72-108">Module Statement</span></span>](../language-reference/statements/module-statement.md)
+- [<span data-ttu-id="7cb72-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="7cb72-109">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
