--- a/docs/visual-basic/misc/bc31408.md
+++ b/docs/visual-basic/misc/bc31408.md
@@ -1,5 +1,5 @@
 ---
-title: «<specifier1>'e'<specifier2>' non possono essere combinati
+title: "' <specifier1> ' è <specifier2> ' non possono essere combinati"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31408
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31408
 ms.assetid: 3dab1c01-0d37-4d82-bb5f-9daf7ac1c4a4
-ms.openlocfilehash: 9d545280c927d963ed9c85cc2fe414da6dab9d5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a6176fa0934125e08159d0d661b69ac59d465ea7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585032"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407834"
 ---
-# <a name="specifier1-and-specifier2-cannot-be-combined"></a><span data-ttu-id="797b5-102">«\<specifier1 >' e '\<specifier2 >' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="797b5-102">'\<specifier1>' and '\<specifier2>' cannot be combined</span></span>
-<span data-ttu-id="797b5-103">Due identificatori incompatibili, ad esempio `Shadows` e `Overrides` , vengono usati insieme.</span><span class="sxs-lookup"><span data-stu-id="797b5-103">Two incompatible specifiers, such as `Shadows` and `Overrides` are used together.</span></span>  
+# <a name="specifier1-and-specifier2-cannot-be-combined"></a><span data-ttu-id="e2542-102">' \<specifier1> ' è \<specifier2> ' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="e2542-102">'\<specifier1>' and '\<specifier2>' cannot be combined</span></span>
+<span data-ttu-id="e2542-103">Due identificatori incompatibili, ad esempio `Shadows` e `Overrides` , vengono usati insieme.</span><span class="sxs-lookup"><span data-stu-id="e2542-103">Two incompatible specifiers, such as `Shadows` and `Overrides` are used together.</span></span>  
   
- <span data-ttu-id="797b5-104">**ID errore:** BC31408</span><span class="sxs-lookup"><span data-stu-id="797b5-104">**Error ID:** BC31408</span></span>  
+ <span data-ttu-id="e2542-104">**ID errore:** BC31408</span><span class="sxs-lookup"><span data-stu-id="e2542-104">**Error ID:** BC31408</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="797b5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="797b5-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e2542-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e2542-105">To correct this error</span></span>  
   
-- <span data-ttu-id="797b5-106">Rimuovere uno degli identificatori.</span><span class="sxs-lookup"><span data-stu-id="797b5-106">Remove one or the other specifier.</span></span>  
+- <span data-ttu-id="e2542-106">Rimuovere uno degli identificatori.</span><span class="sxs-lookup"><span data-stu-id="e2542-106">Remove one or the other specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="797b5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="797b5-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e2542-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e2542-107">See also</span></span>
 
-- [<span data-ttu-id="797b5-108">Shadows</span><span class="sxs-lookup"><span data-stu-id="797b5-108">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
-- [<span data-ttu-id="797b5-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="797b5-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="e2542-108">Shadows</span><span class="sxs-lookup"><span data-stu-id="e2542-108">Shadows</span></span>](../language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="e2542-109">Override</span><span class="sxs-lookup"><span data-stu-id="e2542-109">Overrides</span></span>](../language-reference/modifiers/overrides.md)
