--- a/docs/visual-basic/misc/bc32068.md
+++ b/docs/visual-basic/misc/bc32068.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32068
 ms.assetid: cb5df484-76f9-4092-9d19-f26ddcf1c035
-ms.openlocfilehash: e43659db30e09632c49fbfddfbf5da955bde41d9
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 4ada1b6aa567392a6969b826eb9bc815af0d6ad4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913035"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413830"
 ---
-# <a name="local-variables-within-generic-methods-cannot-be-declared-static"></a><span data-ttu-id="51140-102">Le variabili locali all'interno di metodi generici non possono essere dichiarate 'Static'</span><span class="sxs-lookup"><span data-stu-id="51140-102">Local variables within generic methods cannot be declared 'Static'</span></span>
-<span data-ttu-id="51140-103">La dichiarazione di una variabile locale all'interno di una routine generica specifica `Static`.</span><span class="sxs-lookup"><span data-stu-id="51140-103">The declaration of a local variable within a generic procedure specifies `Static`.</span></span>  
+# <a name="local-variables-within-generic-methods-cannot-be-declared-static"></a><span data-ttu-id="850c2-102">Le variabili locali all'interno di metodi generici non possono essere dichiarate 'Static'</span><span class="sxs-lookup"><span data-stu-id="850c2-102">Local variables within generic methods cannot be declared 'Static'</span></span>
+<span data-ttu-id="850c2-103">La dichiarazione di una variabile locale all'interno di una routine generica specifica `Static`.</span><span class="sxs-lookup"><span data-stu-id="850c2-103">The declaration of a local variable within a generic procedure specifies `Static`.</span></span>  
   
- <span data-ttu-id="51140-104">Visual Basic e .NET Framework attualmente non supportano le combinazioni di variabili statiche e routine generiche.</span><span class="sxs-lookup"><span data-stu-id="51140-104">Visual Basic and the .NET Framework do not currently support any combination of static variables and generic procedures.</span></span>  
+ <span data-ttu-id="850c2-104">Visual Basic e .NET Framework attualmente non supportano le combinazioni di variabili statiche e routine generiche.</span><span class="sxs-lookup"><span data-stu-id="850c2-104">Visual Basic and the .NET Framework do not currently support any combination of static variables and generic procedures.</span></span>  
   
- <span data-ttu-id="51140-105">**ID errore:** BC32068</span><span class="sxs-lookup"><span data-stu-id="51140-105">**Error ID:** BC32068</span></span>  
+ <span data-ttu-id="850c2-105">**ID errore:** BC32068</span><span class="sxs-lookup"><span data-stu-id="850c2-105">**Error ID:** BC32068</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="51140-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="51140-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="850c2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="850c2-106">To correct this error</span></span>  
   
-- <span data-ttu-id="51140-107">Rimuovere la parola chiave `Static` dalla dichiarazione di variabile.</span><span class="sxs-lookup"><span data-stu-id="51140-107">Remove the `Static` keyword from the variable declaration.</span></span>  
+- <span data-ttu-id="850c2-107">Rimuovere la parola chiave `Static` dalla dichiarazione di variabile.</span><span class="sxs-lookup"><span data-stu-id="850c2-107">Remove the `Static` keyword from the variable declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="51140-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="51140-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="850c2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="850c2-108">See also</span></span>
 
-- [<span data-ttu-id="51140-109">Static</span><span class="sxs-lookup"><span data-stu-id="51140-109">Static</span></span>](../../visual-basic/language-reference/modifiers/static.md)
+- [<span data-ttu-id="850c2-109">Statico</span><span class="sxs-lookup"><span data-stu-id="850c2-109">Static</span></span>](../language-reference/modifiers/static.md)
 
-- [<span data-ttu-id="51140-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="51140-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="51140-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="51140-111">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="850c2-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="850c2-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="850c2-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="850c2-111">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
