--- a/docs/visual-basic/misc/bc36549.md
+++ b/docs/visual-basic/misc/bc36549.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà di tipo anonimo '<propertyname>' non può essere utilizzato nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
+title: Impossibile usare la proprietà di tipo anonimo '<propertyname>' nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36549
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36549
 ms.assetid: 6d04692a-957a-41ce-a19c-fcb06a186d1a
-ms.openlocfilehash: 1c42dc295f97fac54b474281be9b4ed8e64a2006
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2d169aafb3ee6b7ee18a250cc509159c1e3c96ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64753339"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378562"
 ---
-# <a name="anonymous-type-property-propertyname-cannot-be-used-in-the-definition-of-a-lambda-expression-within-the-same-initialization-list"></a><span data-ttu-id="c25d3-102">Proprietà di tipo anonimo '\<NomeProprietà >' non può essere utilizzato nella definizione di un'espressione lambda nello stesso elenco di inizializzazione</span><span class="sxs-lookup"><span data-stu-id="c25d3-102">Anonymous type property '\<propertyname>' cannot be used in the definition of a lambda expression within the same initialization list</span></span>
+# <a name="anonymous-type-property-propertyname-cannot-be-used-in-the-definition-of-a-lambda-expression-within-the-same-initialization-list"></a><span data-ttu-id="a3c0b-102">Impossibile usare la proprietà di tipo anonimo '\<propertyname>' nella definizione di un'espressione lambda nello stesso elenco di inizializzazione</span><span class="sxs-lookup"><span data-stu-id="a3c0b-102">Anonymous type property '\<propertyname>' cannot be used in the definition of a lambda expression within the same initialization list</span></span>
 
-<span data-ttu-id="c25d3-103">Le proprietà definite nell'elenco di inizializzazione di tipo anonimo non possono far parte di una definizione di un'espressione lambda nello stesso elenco.</span><span class="sxs-lookup"><span data-stu-id="c25d3-103">Properties defined in the initialization list of an anonymous type cannot be part of a lambda expression definition in the same list.</span></span> <span data-ttu-id="c25d3-104">Ad esempio, nel codice seguente, la proprietà `Num` non può essere inclusa nella definizione dell'oggetto `LambdaFun`.</span><span class="sxs-lookup"><span data-stu-id="c25d3-104">For example, in the following code, property `Num` cannot be included in the definition of `LambdaFun`.</span></span>
+<span data-ttu-id="a3c0b-103">Le proprietà definite nell'elenco di inizializzazione di tipo anonimo non possono far parte di una definizione di un'espressione lambda nello stesso elenco.</span><span class="sxs-lookup"><span data-stu-id="a3c0b-103">Properties defined in the initialization list of an anonymous type cannot be part of a lambda expression definition in the same list.</span></span> <span data-ttu-id="a3c0b-104">Ad esempio, nel codice seguente, la proprietà `Num` non può essere inclusa nella definizione dell'oggetto `LambdaFun`.</span><span class="sxs-lookup"><span data-stu-id="a3c0b-104">For example, in the following code, property `Num` cannot be included in the definition of `LambdaFun`.</span></span>
 
 ```vb
 ' Not valid.
 'Dim anon = New With {.Num = 4, .LambdaFun = Function() .Num > 0}
 ```
 
-<span data-ttu-id="c25d3-105">**ID errore:** BC36549</span><span class="sxs-lookup"><span data-stu-id="c25d3-105">**Error ID:** BC36549</span></span>
+<span data-ttu-id="a3c0b-105">**ID errore:** BC36549</span><span class="sxs-lookup"><span data-stu-id="a3c0b-105">**Error ID:** BC36549</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="c25d3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c25d3-106">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="a3c0b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a3c0b-106">To correct this error</span></span>
 
-1. <span data-ttu-id="c25d3-107">È consigliabile suddividere il tipo anonimo in due parti:</span><span class="sxs-lookup"><span data-stu-id="c25d3-107">Consider splitting the anonymous type into two parts:</span></span>
+1. <span data-ttu-id="a3c0b-107">È consigliabile suddividere il tipo anonimo in due parti:</span><span class="sxs-lookup"><span data-stu-id="a3c0b-107">Consider splitting the anonymous type into two parts:</span></span>
 
     ```vb
     Dim anon1 = New With {.Num = 4}
@@ -41,9 +41,9 @@ ms.locfileid: "64753339"
     Console.WriteLine(anon3.lambdaFun(anon1.Num))
     ```
 
-    <span data-ttu-id="c25d3-108">Notare che se si dichiara l'oggetto `anon1.Num` come una proprietà `Key` , non è possibile modificarne il valore.</span><span class="sxs-lookup"><span data-stu-id="c25d3-108">Note that if you declare `anon1.Num` as a `Key` property, its value cannot be changed.</span></span>
+    <span data-ttu-id="a3c0b-108">Notare che se si dichiara l'oggetto `anon1.Num` come una proprietà `Key` , non è possibile modificarne il valore.</span><span class="sxs-lookup"><span data-stu-id="a3c0b-108">Note that if you declare `anon1.Num` as a `Key` property, its value cannot be changed.</span></span>
 
-2. <span data-ttu-id="c25d3-109">In alternativa è possibile usare un'istruzione Function normale per accedere alla proprietà di tipo anonimo:</span><span class="sxs-lookup"><span data-stu-id="c25d3-109">An alternative is to use a regular function statement to access the anonymous type property:</span></span>
+2. <span data-ttu-id="a3c0b-109">In alternativa è possibile usare un'istruzione Function normale per accedere alla proprietà di tipo anonimo:</span><span class="sxs-lookup"><span data-stu-id="a3c0b-109">An alternative is to use a regular function statement to access the anonymous type property:</span></span>
 
     ```vb
     Function testNum(ByVal n As Integer) As Boolean
@@ -52,14 +52,14 @@ ms.locfileid: "64753339"
     Console.WriteLine(testNum(anon1.Num))
     ```
 
-3. <span data-ttu-id="c25d3-110">Allo stesso modo, è possibile usare una funzione lambda definita al di fuori del tipo anonimo:</span><span class="sxs-lookup"><span data-stu-id="c25d3-110">Similarly, you can use a lambda function that is defined outside the anonymous type:</span></span>
+3. <span data-ttu-id="a3c0b-110">Allo stesso modo, è possibile usare una funzione lambda definita al di fuori del tipo anonimo:</span><span class="sxs-lookup"><span data-stu-id="a3c0b-110">Similarly, you can use a lambda function that is defined outside the anonymous type:</span></span>
 
     ```vb
     Dim lambdaFun1 = Function() anon1.Num > 0
     Dim lambdaFun2 = Function(n As Integer) n > 0
     ```
 
-## <a name="see-also"></a><span data-ttu-id="c25d3-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c25d3-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a3c0b-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a3c0b-111">See also</span></span>
 
-- [<span data-ttu-id="c25d3-112">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="c25d3-112">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [<span data-ttu-id="c25d3-113">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="c25d3-113">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="a3c0b-112">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="a3c0b-112">Lambda Expressions</span></span>](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="a3c0b-113">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="a3c0b-113">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
