--- a/docs/visual-basic/misc/bc36579.md
+++ b/docs/visual-basic/misc/bc36579.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC36579
 ms.assetid: f59617b2-ca66-45c6-baaa-3c8bdf7f9a55
-ms.openlocfilehash: 8619f52e1e96814041945fe191ace00fb3d50a03
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 01eb77b2d3f10a1211866cee58e977dc4f5c9abe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623285"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377574"
 ---
-# <a name="too-many-type-arguments"></a><span data-ttu-id="0e18e-102">Troppi argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="0e18e-102">Too many type arguments</span></span>
-<span data-ttu-id="0e18e-103">È stato richiamato un metodo generico con più argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="0e18e-103">A generic method has been invoked with more type arguments than there are type parameters.</span></span>  
+# <a name="too-many-type-arguments"></a><span data-ttu-id="b1f95-102">Troppi argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="b1f95-102">Too many type arguments</span></span>
+<span data-ttu-id="b1f95-103">È stato richiamato un metodo generico con più argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="b1f95-103">A generic method has been invoked with more type arguments than there are type parameters.</span></span>  
   
- <span data-ttu-id="0e18e-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="0e18e-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
+ <span data-ttu-id="b1f95-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="b1f95-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
   
- <span data-ttu-id="0e18e-105">**ID errore:** BC36579</span><span class="sxs-lookup"><span data-stu-id="0e18e-105">**Error ID:** BC36579</span></span>  
+ <span data-ttu-id="b1f95-105">**ID errore:** BC36579</span><span class="sxs-lookup"><span data-stu-id="b1f95-105">**Error ID:** BC36579</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0e18e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0e18e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b1f95-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b1f95-106">To correct this error</span></span>  
   
-- <span data-ttu-id="0e18e-107">Rimuovere gli argomenti di tipo dall'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo del metodo generico richiamato.</span><span class="sxs-lookup"><span data-stu-id="0e18e-107">Remove type arguments from your type argument list so that there is one for each type parameter of the generic method you are invoking.</span></span>  
+- <span data-ttu-id="b1f95-107">Rimuovere gli argomenti di tipo dall'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo del metodo generico richiamato.</span><span class="sxs-lookup"><span data-stu-id="b1f95-107">Remove type arguments from your type argument list so that there is one for each type parameter of the generic method you are invoking.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0e18e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0e18e-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b1f95-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b1f95-108">See also</span></span>
 
-- [<span data-ttu-id="0e18e-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0e18e-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="0e18e-110">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="0e18e-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="b1f95-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b1f95-109">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="b1f95-110">Type List</span><span class="sxs-lookup"><span data-stu-id="b1f95-110">Type List</span></span>](../language-reference/statements/type-list.md)
