--- a/docs/visual-basic/misc/bc40024.md
+++ b/docs/visual-basic/misc/bc40024.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà '<propertyname>'dichiara in modo implicito'<implicitmembername>', che è in conflitto con un membro dichiarato in modo implicito per il membro'<membername>'nella classe base'<baseclassname>'
+title: La proprietà' <propertyname> ' dichiara in modo implicito ' <implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' <membername> ' nella classe base ' <baseclassname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40024
@@ -7,42 +7,42 @@ f1_keywords:
 helpviewer_keywords:
 - BC40024
 ms.assetid: fab4f290-a41f-47d6-9bdb-44eb8dd395d5
-ms.openlocfilehash: 9d81bbd12ba3286bee571fcd6fae02842f8ba6c7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1ada5cda756e8b66cafe6ea8fd36b081ce0c045
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624410"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384235"
 ---
-# <a name="property-propertyname-implicitly-declares-implicitmembername-which-conflicts-with-a-member-implicitly-declared-for-member-membername-in-the-base-class-baseclassname"></a><span data-ttu-id="9d415-102">Proprietà '\<NomeProprietà >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro dichiarato in modo implicito per il membro'\<nomeMembro >' nella classe base\<nomeclassebase > '</span><span class="sxs-lookup"><span data-stu-id="9d415-102">Property '\<propertyname>' implicitly declares '\<implicitmembername>', which conflicts with a member implicitly declared for member '\<membername>' in the base class '\<baseclassname>'</span></span>
-<span data-ttu-id="9d415-103">Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro dichiarato in modo implicito per il membro'\<membername2 >' nella classe base\<nomeclassebase >'.</span><span class="sxs-lookup"><span data-stu-id="9d415-103">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member implicitly declared for member '\<membername2>' in the base class '\<baseclassname>'.</span></span> <span data-ttu-id="9d415-104">Quindi, il membro non deve essere dichiarato 'Overloads'.</span><span class="sxs-lookup"><span data-stu-id="9d415-104">So the member should not be declared 'Overloads'.</span></span>  
+# <a name="property-propertyname-implicitly-declares-implicitmembername-which-conflicts-with-a-member-implicitly-declared-for-member-membername-in-the-base-class-baseclassname"></a><span data-ttu-id="04ef0-102">La proprietà' \<propertyname> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' \<membername> ' nella classe base ' \<baseclassname> '</span><span class="sxs-lookup"><span data-stu-id="04ef0-102">Property '\<propertyname>' implicitly declares '\<implicitmembername>', which conflicts with a member implicitly declared for member '\<membername>' in the base class '\<baseclassname>'</span></span>
+<span data-ttu-id="04ef0-103">Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' \<membername2> ' nella classe base ' \<baseclassname> '.</span><span class="sxs-lookup"><span data-stu-id="04ef0-103">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member implicitly declared for member '\<membername2>' in the base class '\<baseclassname>'.</span></span> <span data-ttu-id="04ef0-104">Quindi, il membro non deve essere dichiarato 'Overloads'.</span><span class="sxs-lookup"><span data-stu-id="04ef0-104">So the member should not be declared 'Overloads'.</span></span>  
   
- <span data-ttu-id="9d415-105">Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro implicito della classe base e specifica la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) .</span><span class="sxs-lookup"><span data-stu-id="9d415-105">A property in a derived class generates an implicit member with the same name as an implicit member of the base class and specifies the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword.</span></span>  
+ <span data-ttu-id="04ef0-105">Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro implicito della classe base e specifica la parola chiave [Overloads](../language-reference/modifiers/overloads.md) .</span><span class="sxs-lookup"><span data-stu-id="04ef0-105">A property in a derived class generates an implicit member with the same name as an implicit member of the base class and specifies the [Overloads](../language-reference/modifiers/overloads.md) keyword.</span></span>  
   
- <span data-ttu-id="9d415-106">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="9d415-106">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="9d415-107">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="9d415-107">You cannot define an additional version of a base class member unless that base class member already specifies `Overloads`.</span></span> <span data-ttu-id="9d415-108">Dal momento che i membri impliciti non specificano `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) sia il membro della classe base implicita.</span><span class="sxs-lookup"><span data-stu-id="9d415-108">Because implicit members do not specify `Overloads`, the compiler assumes that this property [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) the implicit base class member.</span></span>  
+ <span data-ttu-id="04ef0-106">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="04ef0-106">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="04ef0-107">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="04ef0-107">You cannot define an additional version of a base class member unless that base class member already specifies `Overloads`.</span></span> <span data-ttu-id="04ef0-108">Dal momento che i membri impliciti non specificano `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../language-reference/modifiers/shadows.md) sia il membro della classe base implicita.</span><span class="sxs-lookup"><span data-stu-id="04ef0-108">Because implicit members do not specify `Overloads`, the compiler assumes that this property [Shadows](../language-reference/modifiers/shadows.md) the implicit base class member.</span></span>  
   
- <span data-ttu-id="9d415-109">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="9d415-109">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="9d415-110">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="9d415-110">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
+ <span data-ttu-id="04ef0-109">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="04ef0-109">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="04ef0-110">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="04ef0-110">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
   
-|<span data-ttu-id="9d415-111">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="9d415-111">Declared element</span></span>|<span data-ttu-id="9d415-112">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="9d415-112">Implicitly created members</span></span>|  
+|<span data-ttu-id="04ef0-111">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="04ef0-111">Declared element</span></span>|<span data-ttu-id="04ef0-112">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="04ef0-112">Implicitly created members</span></span>|  
 |----------------------|--------------------------------|  
-|<span data-ttu-id="9d415-113">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="9d415-113">Enumeration</span></span>|<span data-ttu-id="9d415-114">Membro`value__` </span><span class="sxs-lookup"><span data-stu-id="9d415-114">`value__` member</span></span>|  
-|<span data-ttu-id="9d415-115">event</span><span class="sxs-lookup"><span data-stu-id="9d415-115">Event</span></span>|<span data-ttu-id="9d415-116">Routine`add_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="9d415-116">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="9d415-117">Routine`remove_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="9d415-117">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="9d415-118">Campo di`<eventname>Event` </span><span class="sxs-lookup"><span data-stu-id="9d415-118">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="9d415-119">Delegato`<eventname>EventHandler` </span><span class="sxs-lookup"><span data-stu-id="9d415-119">`<eventname>EventHandler` delegate</span></span>|  
-|<span data-ttu-id="9d415-120">Proprietà</span><span class="sxs-lookup"><span data-stu-id="9d415-120">Property</span></span>|<span data-ttu-id="9d415-121">Routine`get_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="9d415-121">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="9d415-122">Routine`set_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="9d415-122">`set_<propertyname>` procedure</span></span>|  
-|<span data-ttu-id="9d415-123">Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> </span><span class="sxs-lookup"><span data-stu-id="9d415-123">`My.Form` member, `My.WebService` member, or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> attribute</span></span>|<span data-ttu-id="9d415-124">Variabile`m_<variablename>` `Static` </span><span class="sxs-lookup"><span data-stu-id="9d415-124">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="9d415-125">Proprietà`<variablename>` </span><span class="sxs-lookup"><span data-stu-id="9d415-125">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="9d415-126">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="9d415-126">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="9d415-127">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="9d415-127">`set_<variablename>` procedure</span></span>|  
-|<span data-ttu-id="9d415-128">Variabile`WithEvents` </span><span class="sxs-lookup"><span data-stu-id="9d415-128">`WithEvents` variable</span></span>|<span data-ttu-id="9d415-129">Variabile `_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="9d415-129">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="9d415-130">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="9d415-130">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="9d415-131">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="9d415-131">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="9d415-132">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="9d415-132">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="04ef0-113">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="04ef0-113">Enumeration</span></span>|<span data-ttu-id="04ef0-114">Membro`value__`</span><span class="sxs-lookup"><span data-stu-id="04ef0-114">`value__` member</span></span>|  
+|<span data-ttu-id="04ef0-115">Event</span><span class="sxs-lookup"><span data-stu-id="04ef0-115">Event</span></span>|<span data-ttu-id="04ef0-116">Routine`add_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-116">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="04ef0-117">Routine`remove_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-117">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="04ef0-118">Campo di`<eventname>Event`</span><span class="sxs-lookup"><span data-stu-id="04ef0-118">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="04ef0-119">Delegato`<eventname>EventHandler`</span><span class="sxs-lookup"><span data-stu-id="04ef0-119">`<eventname>EventHandler` delegate</span></span>|  
+|<span data-ttu-id="04ef0-120">Proprietà</span><span class="sxs-lookup"><span data-stu-id="04ef0-120">Property</span></span>|<span data-ttu-id="04ef0-121">Routine`get_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-121">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="04ef0-122">Routine`set_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-122">`set_<propertyname>` procedure</span></span>|  
+|<span data-ttu-id="04ef0-123">Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute></span><span class="sxs-lookup"><span data-stu-id="04ef0-123">`My.Form` member, `My.WebService` member, or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> attribute</span></span>|<span data-ttu-id="04ef0-124">`m_<variablename>``Static`variabile</span><span class="sxs-lookup"><span data-stu-id="04ef0-124">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="04ef0-125">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-125">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="04ef0-126">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-126">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="04ef0-127">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-127">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="04ef0-128">Variabile</span><span class="sxs-lookup"><span data-stu-id="04ef0-128">`WithEvents` variable</span></span>|<span data-ttu-id="04ef0-129">Variabile</span><span class="sxs-lookup"><span data-stu-id="04ef0-129">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="04ef0-130">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-130">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="04ef0-131">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-131">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="04ef0-132">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="04ef0-132">`set_<variablename>` procedure</span></span>|  
   
- <span data-ttu-id="9d415-133">A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="9d415-133">Because of the risk of name conflicts, you should avoid naming any declared programming element using the same form as any one of these implicit members.</span></span> <span data-ttu-id="9d415-134">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="9d415-134">For example, you should avoid any element name that starts with `get_` or `set_`.</span></span>  
+ <span data-ttu-id="04ef0-133">A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="04ef0-133">Because of the risk of name conflicts, you should avoid naming any declared programming element using the same form as any one of these implicit members.</span></span> <span data-ttu-id="04ef0-134">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="04ef0-134">For example, you should avoid any element name that starts with `get_` or `set_`.</span></span>  
   
- <span data-ttu-id="9d415-135">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="9d415-135">By default, this message is a warning.</span></span> <span data-ttu-id="9d415-136">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="9d415-136">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="04ef0-135">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="04ef0-135">By default, this message is a warning.</span></span> <span data-ttu-id="04ef0-136">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="04ef0-136">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="9d415-137">**ID errore:** BC40024</span><span class="sxs-lookup"><span data-stu-id="9d415-137">**Error ID:** BC40024</span></span>  
+ <span data-ttu-id="04ef0-137">**ID errore:** BC40024</span><span class="sxs-lookup"><span data-stu-id="04ef0-137">**Error ID:** BC40024</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9d415-138">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9d415-138">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="04ef0-138">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="04ef0-138">To correct this error</span></span>  
   
-- <span data-ttu-id="9d415-139">Se si prevede di nascondere il membro implicito della classe base, sostituire la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="9d415-139">If you intend to hide, or shadow, the implicit base class member, replace the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword with the [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keyword in the declaration of the property.</span></span>  
+- <span data-ttu-id="04ef0-139">Se si prevede di nascondere il membro implicito della classe base, sostituire la parola chiave [Overloads](../language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="04ef0-139">If you intend to hide, or shadow, the implicit base class member, replace the [Overloads](../language-reference/modifiers/overloads.md) keyword with the [Shadows](../language-reference/modifiers/shadows.md) keyword in the declaration of the property.</span></span>  
   
-- <span data-ttu-id="9d415-140">Se non si intende nascondere il membro implicito della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="9d415-140">If you do not intend to shadow the implicit base class member, change the name of the property to avoid conflicts with names listed in the previous table.</span></span>  
+- <span data-ttu-id="04ef0-140">Se non si intende nascondere il membro implicito della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="04ef0-140">If you do not intend to shadow the implicit base class member, change the name of the property to avoid conflicts with names listed in the previous table.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9d415-141">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9d415-141">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="04ef0-141">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="04ef0-141">See also</span></span>
 
-- [<span data-ttu-id="9d415-142">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="9d415-142">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="04ef0-142">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="04ef0-142">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
