--- a/docs/visual-basic/misc/bc42024.md
+++ b/docs/visual-basic/misc/bc42024.md
@@ -1,5 +1,5 @@
 ---
-title: "Variabile locale non usata: '<localvariablename>'"
+title: Variabile locale non usata:' <localvariablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42024
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC42024
 ms.assetid: 749b1315-0f85-4f7e-b68b-8cc4346c502b
-ms.openlocfilehash: 2033f288232e231888635312d829b719c1578f98
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a14645466fb2271641338be90ba00766d729bef8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61595478"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395688"
 ---
-# <a name="unused-local-variable-localvariablename"></a><span data-ttu-id="979fa-102">Variabile locale non usata: '\<nomevariabilelocale >'</span><span class="sxs-lookup"><span data-stu-id="979fa-102">Unused local variable: '\<localvariablename>'</span></span>
-<span data-ttu-id="979fa-103">Una variabile locale di una routine è dichiarata, ma non viene mai usata.</span><span class="sxs-lookup"><span data-stu-id="979fa-103">A local variable in a procedure is declared but never used.</span></span>  
+# <a name="unused-local-variable-localvariablename"></a><span data-ttu-id="770d8-102">Variabile locale non usata:' \<localvariablename> '</span><span class="sxs-lookup"><span data-stu-id="770d8-102">Unused local variable: '\<localvariablename>'</span></span>
+<span data-ttu-id="770d8-103">Una variabile locale di una routine è dichiarata, ma non viene mai usata.</span><span class="sxs-lookup"><span data-stu-id="770d8-103">A local variable in a procedure is declared but never used.</span></span>  
   
- <span data-ttu-id="979fa-104">Potrebbe esserci un errore di ortografia nelle variabili locali della routine.</span><span class="sxs-lookup"><span data-stu-id="979fa-104">One possibility is that there is a spelling mistake among the local variables in the procedure.</span></span> <span data-ttu-id="979fa-105">Se questa variabile è di fatto usata in un'altra istruzione, ma con una grafia diversa, si presenta al compilatore come se si trattasse di due variabili diverse.</span><span class="sxs-lookup"><span data-stu-id="979fa-105">If this variable is in fact used in another statement but spelled differently, it will appear to the compiler as two different variables.</span></span>  
+ <span data-ttu-id="770d8-104">Potrebbe esserci un errore di ortografia nelle variabili locali della routine.</span><span class="sxs-lookup"><span data-stu-id="770d8-104">One possibility is that there is a spelling mistake among the local variables in the procedure.</span></span> <span data-ttu-id="770d8-105">Se questa variabile è di fatto usata in un'altra istruzione, ma con una grafia diversa, si presenta al compilatore come se si trattasse di due variabili diverse.</span><span class="sxs-lookup"><span data-stu-id="770d8-105">If this variable is in fact used in another statement but spelled differently, it will appear to the compiler as two different variables.</span></span>  
   
- <span data-ttu-id="979fa-106">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="979fa-106">By default, this message is a warning.</span></span> <span data-ttu-id="979fa-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="979fa-107">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="770d8-106">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="770d8-106">By default, this message is a warning.</span></span> <span data-ttu-id="770d8-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="770d8-107">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="979fa-108">**ID errore:** BC42024</span><span class="sxs-lookup"><span data-stu-id="979fa-108">**Error ID:** BC42024</span></span>  
+ <span data-ttu-id="770d8-108">**ID errore:** BC42024</span><span class="sxs-lookup"><span data-stu-id="770d8-108">**Error ID:** BC42024</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="979fa-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="979fa-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="770d8-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="770d8-109">To correct this error</span></span>  
   
-1. <span data-ttu-id="979fa-110">Verificare se le variabili locali incluse nelle routine contengono errori di ortografia.</span><span class="sxs-lookup"><span data-stu-id="979fa-110">Check for spelling mistakes among the local variables within the procedure.</span></span> <span data-ttu-id="979fa-111">Tenere presente che maiuscole e minuscole si equivalgono.</span><span class="sxs-lookup"><span data-stu-id="979fa-111">Notice that casing does not make a difference.</span></span> <span data-ttu-id="979fa-112">I nomi `ABC` e `abc` fanno riferimento alla stessa variabile.</span><span class="sxs-lookup"><span data-stu-id="979fa-112">The names `ABC` and `abc` are considered to refer to the same variable.</span></span>  
+1. <span data-ttu-id="770d8-110">Verificare se le variabili locali incluse nelle routine contengono errori di ortografia.</span><span class="sxs-lookup"><span data-stu-id="770d8-110">Check for spelling mistakes among the local variables within the procedure.</span></span> <span data-ttu-id="770d8-111">Tenere presente che maiuscole e minuscole si equivalgono.</span><span class="sxs-lookup"><span data-stu-id="770d8-111">Notice that casing does not make a difference.</span></span> <span data-ttu-id="770d8-112">I nomi `ABC` e `abc` fanno riferimento alla stessa variabile.</span><span class="sxs-lookup"><span data-stu-id="770d8-112">The names `ABC` and `abc` are considered to refer to the same variable.</span></span>  
   
-2. <span data-ttu-id="979fa-113">Se non sono presenti errori di ortografia, rimuovere la dichiarazione della variabile oppure usarla in un'altra istruzione della routine.</span><span class="sxs-lookup"><span data-stu-id="979fa-113">If there is no spelling mistake, either remove the declaration of this variable or use it in another statement in the procedure.</span></span>  
+2. <span data-ttu-id="770d8-113">Se non sono presenti errori di ortografia, rimuovere la dichiarazione della variabile oppure usarla in un'altra istruzione della routine.</span><span class="sxs-lookup"><span data-stu-id="770d8-113">If there is no spelling mistake, either remove the declaration of this variable or use it in another statement in the procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="979fa-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="979fa-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="770d8-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="770d8-114">See also</span></span>
 
-- [<span data-ttu-id="979fa-115">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="979fa-115">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [<span data-ttu-id="979fa-116">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="979fa-116">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="770d8-115">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="770d8-115">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="770d8-116">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="770d8-116">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
